<package>
  <name>octomap_ros</name>
  <version>0.4.0</version>
  <description>
    octomap_ros provides conversion functions between ROS and OctoMap's native types.
    This enables a convenvient use of the octomap package in ROS.
    
  </description>
  <author email="HornungA@informatik.uni-freiburg.de">Armin Hornung</author>
  <maintainer email="HornungA@informatik.uni-freiburg.de">Armin Hornung</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/octomap_ros</url>
  <url type="bugtracker">https://github.com/OctoMap/octomap_ros/issues</url>
  
    <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>catkin</build_depend>
<build_depend>roscpp</build_depend>
  <build_depend>octomap_msgs</build_depend> 
  <build_depend>octomap</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
    <build_depend>cv_bridge</build_depend>
<build_depend>message_generation</build_depend>
<build_depend>geometry_msgs</build_depend>
<build_depend>std_msgs</build_depend>

<build_depend>pcl_conversions</build_depend>
<build_depend>pcl_msgs</build_depend>
<run_depend>pcl_conversions</run_depend>
<run_depend>pcl_msgs</run_depend>
  

  <run_depend>octomap_msgs</run_depend>
<run_depend>geometry_msgs</run_depend>
<run_depend>std_msgs</run_depend>
<run_depend>message_runtime</run_depend>
  <run_depend>octomap</run_depend>  
  <run_depend>sensor_msgs</run_depend>
<run_depend>roscpp</run_depend>  
  <run_depend>tf</run_depend>
    <run_depend>cv_bridge</run_depend>



</package>
